--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -87,6 +87,7 @@
                             android:enabled="false"
                             android:layout_weight="1"/>
                         <androidx.appcompat.widget.AppCompatImageButton
+                            android:id="@+id/dob_picker"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@drawable/shape_button_rounded"
